# Esp32H2GasCounter

./: .gitignore  CMakeLists.txt  README.md  counter_value_update.txt  nvs.csv  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/: README.md
main/: CMakeLists.txt  esp_zb_gas_led.c  esp_zb_gas_led.h  esp_zb_gas_meter.c  esp_zb_gas_meter.h  esp_zb_gas_meter_adc.c  esp_zb_gas_meter_adc.h  esp_zb_gas_meter_adc_zigbee.h  esp_zb_gas_meter_zigbee.c  esp_zb_gas_meter_zigbee.h  esp_zb_gas_ota.c  esp_zb_gas_ota.h  esp_zb_gas_version.h  idf_component.yml
zigbee2mqtt/: README.md  gas_meter.js  micasa.js
